[gd_scene load_steps=9 format=3 uid="uid://cpu5vs2cuff86"]

[ext_resource type="Theme" uid="uid://cq6o71oo66iu6" path="res://Themes/menu_theme.tres" id="1_q5m8r"]
[ext_resource type="PackedScene" uid="uid://cb4w54r0hpvku" path="res://Scenes/UI/BackButton.tscn" id="1_wjb22"]
[ext_resource type="Script" path="res://Scenes/UI/smith_menu.gd" id="2_o2la8"]
[ext_resource type="PackedScene" uid="uid://t7wwbuy0cv17" path="res://Scenes/UI/GameUIResources.tscn" id="2_p64fn"]
[ext_resource type="Texture2D" uid="uid://fwk2q16s8clq" path="res://Resources/CutTileset/tile117.png" id="3_7l8ff"]
[ext_resource type="Script" path="res://Scenes/UI/button.gd" id="5_j8qmr"]
[ext_resource type="Texture2D" uid="uid://duu2swcdw4rpw" path="res://Resources/CutTileset/tile085.png" id="5_orn7g"]
[ext_resource type="Texture2D" uid="uid://cv8p040t5okk1" path="res://Resources/CutTileset/tile131.png" id="6_iq4x2"]

[node name="SmithMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_q5m8r")
script = ExtResource("2_o2la8")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.105882, 0.305882, 0.521569, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HoursRemaining" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
text = "Hours Remaining:
10"
horizontal_alignment = 1

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 2.0
theme_override_font_sizes/font_size = 40
text = "Smith 
"

[node name="DaysUntilBoss" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 6
text = "Days till Boss:
5
"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="UpgradeSmithOptions" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Panel/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PanelArmor" type="Panel" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/UpgradeSmithOptions"]
layout_mode = 2
size_flags_vertical = 3

[node name="ArmorUpgrade" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/UpgradeSmithOptions/PanelArmor"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_right = -22.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/UpgradeSmithOptions/PanelArmor/ArmorUpgrade"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_7l8ff")
expand_mode = 3
stretch_mode = 5

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/UpgradeSmithOptions/PanelArmor/ArmorUpgrade"]
layout_mode = 2
size_flags_horizontal = 4
text = "Armor Upgrade
(Max SP)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameUIResources" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/UpgradeSmithOptions/PanelArmor/ArmorUpgrade" instance=ExtResource("2_p64fn")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/UpgradeSmithOptions/PanelArmor/ArmorUpgrade"]
layout_mode = 2
size_flags_horizontal = 3
text = "Time: 2h"

[node name="ArmorUpgradeButton" type="Button" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/UpgradeSmithOptions/PanelArmor/ArmorUpgrade"]
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_top = NodePath("../../../PanelBoots/BootsUpgrade/BootsUpgradeButton")
focus_neighbor_bottom = NodePath("../../../PanelSword/SwordUpgrade/SwordUpgradeButton")
focus_next = NodePath("../../../PanelSword/SwordUpgrade/SwordUpgradeButton")
focus_previous = NodePath("../../../PanelBoots/BootsUpgrade/BootsUpgradeButton")
text = "Upgrade"
script = ExtResource("5_j8qmr")
buttonType = true

[node name="PanelSword" type="Panel" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/UpgradeSmithOptions"]
layout_mode = 2
size_flags_vertical = 3

[node name="SwordUpgrade" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/UpgradeSmithOptions/PanelSword"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_right = -22.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/UpgradeSmithOptions/PanelSword/SwordUpgrade"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("5_orn7g")
expand_mode = 3
stretch_mode = 5

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/UpgradeSmithOptions/PanelSword/SwordUpgrade"]
layout_mode = 2
size_flags_horizontal = 4
text = "Sword Upgrade
(SP Drain)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameUIResources" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/UpgradeSmithOptions/PanelSword/SwordUpgrade" instance=ExtResource("2_p64fn")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/UpgradeSmithOptions/PanelSword/SwordUpgrade"]
layout_mode = 2
size_flags_horizontal = 3
text = "Time: 2h"

[node name="SwordUpgradeButton" type="Button" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/UpgradeSmithOptions/PanelSword/SwordUpgrade"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_neighbor_top = NodePath("../../../PanelArmor/ArmorUpgrade/ArmorUpgradeButton")
focus_neighbor_bottom = NodePath("../../../PanelBoots/BootsUpgrade/BootsUpgradeButton")
focus_next = NodePath("../../../PanelBoots/BootsUpgrade/BootsUpgradeButton")
focus_previous = NodePath("../../../PanelArmor/ArmorUpgrade/ArmorUpgradeButton")
text = "Upgrade"
script = ExtResource("5_j8qmr")
buttonType = true

[node name="PanelBoots" type="Panel" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/UpgradeSmithOptions"]
layout_mode = 2
size_flags_vertical = 3

[node name="BootsUpgrade" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/UpgradeSmithOptions/PanelBoots"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_right = -22.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/UpgradeSmithOptions/PanelBoots/BootsUpgrade"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("6_iq4x2")
expand_mode = 3
stretch_mode = 5

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/UpgradeSmithOptions/PanelBoots/BootsUpgrade"]
layout_mode = 2
size_flags_horizontal = 4
text = "Boots Upgrade
(Sprint Speed)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameUIResources" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/UpgradeSmithOptions/PanelBoots/BootsUpgrade" instance=ExtResource("2_p64fn")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/UpgradeSmithOptions/PanelBoots/BootsUpgrade"]
layout_mode = 2
size_flags_horizontal = 3
text = "Time: 2h"

[node name="BootsUpgradeButton" type="Button" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/UpgradeSmithOptions/PanelBoots/BootsUpgrade"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_neighbor_top = NodePath("../../../PanelSword/SwordUpgrade/SwordUpgradeButton")
focus_neighbor_bottom = NodePath("../../../PanelArmor/ArmorUpgrade/ArmorUpgradeButton")
focus_next = NodePath("../../../PanelArmor/ArmorUpgrade/ArmorUpgradeButton")
focus_previous = NodePath("../../../PanelSword/SwordUpgrade/SwordUpgradeButton")
text = "Upgrade"
script = ExtResource("5_j8qmr")
buttonType = true

[node name="GoBackButton" parent="." instance=ExtResource("1_wjb22")]
layout_mode = 0
offset_left = 3.0
offset_right = 98.0

[node name="GameUIResources" parent="." instance=ExtResource("2_p64fn")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_bottom = 0.0
offset_left = -83.0
offset_right = -3.0
offset_bottom = 68.0
grow_horizontal = 0
grow_vertical = 1
is_player_resources = true

[connection signal="button_up" from="MarginContainer/VBoxContainer/Panel/MarginContainer/UpgradeSmithOptions/PanelArmor/ArmorUpgrade/ArmorUpgradeButton" to="MarginContainer/VBoxContainer/Panel/MarginContainer/UpgradeSmithOptions/PanelArmor/ArmorUpgrade/ArmorUpgradeButton" method="_on_button_up"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Panel/MarginContainer/UpgradeSmithOptions/PanelArmor/ArmorUpgrade/ArmorUpgradeButton" to="MarginContainer/VBoxContainer/Panel/MarginContainer/UpgradeSmithOptions/PanelArmor/ArmorUpgrade/ArmorUpgradeButton" method="_on_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Panel/MarginContainer/UpgradeSmithOptions/PanelArmor/ArmorUpgrade/ArmorUpgradeButton" to="." method="_on_sp_upgrade_button_pressed"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/Panel/MarginContainer/UpgradeSmithOptions/PanelSword/SwordUpgrade/SwordUpgradeButton" to="MarginContainer/VBoxContainer/Panel/MarginContainer/UpgradeSmithOptions/PanelSword/SwordUpgrade/SwordUpgradeButton" method="_on_button_up"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Panel/MarginContainer/UpgradeSmithOptions/PanelSword/SwordUpgrade/SwordUpgradeButton" to="MarginContainer/VBoxContainer/Panel/MarginContainer/UpgradeSmithOptions/PanelSword/SwordUpgrade/SwordUpgradeButton" method="_on_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Panel/MarginContainer/UpgradeSmithOptions/PanelSword/SwordUpgrade/SwordUpgradeButton" to="." method="_on_drain_sp_upgrade_button_pressed"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/Panel/MarginContainer/UpgradeSmithOptions/PanelBoots/BootsUpgrade/BootsUpgradeButton" to="MarginContainer/VBoxContainer/Panel/MarginContainer/UpgradeSmithOptions/PanelBoots/BootsUpgrade/BootsUpgradeButton" method="_on_button_up"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Panel/MarginContainer/UpgradeSmithOptions/PanelBoots/BootsUpgrade/BootsUpgradeButton" to="MarginContainer/VBoxContainer/Panel/MarginContainer/UpgradeSmithOptions/PanelBoots/BootsUpgrade/BootsUpgradeButton" method="_on_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Panel/MarginContainer/UpgradeSmithOptions/PanelBoots/BootsUpgrade/BootsUpgradeButton" to="." method="_on_sprint_speed_upgrade_button_pressed"]
